--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,10 +14,10 @@
   <h2>Add a new song:</h2>
   <form>
     <label>Title</label>
-    <input type="text" name="title" />
+    <input type="text" name="title" required/>
 
     <label>Artist</label>
-    <input type="text" name="artist" />
+    <input type="text" name="artist" required/>
 
     <input type="submit" />
   </form>
