Added README.md, added an HTTP code 400 in the case of error, and edited index.html

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test</title>
+  <title>Favorite Songs</title>
   <!-- You can add jQuery by typing 'npm jquery' and copy the path from modules. -->
   <script src="vendors/jquery-3.1.1.min.js"></script>
   <script src="js/client.js" charset="utf-8"></script>
@@ -12,6 +12,7 @@
 
   </ul>
   <h2>Add a new song:</h2>
+  <h4>No duplicated songs, please!</h4>
   <form>
     <label>Title</label>
     <input type="text" name="title" required/>
